--- a/lms/02-FUNDAMENTAL/F18-python_img/00-basic_1.ipynb
+++ b/lms/02-FUNDAMENTAL/F18-python_img/00-basic_1.ipynb
@@ -24,26 +24,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-21T06:07:19.224162Z",
      "start_time": "2020-08-21T06:07:19.222381Z"
     }
    },
-   "outputs": [],
    "source": [
-    "## \n"
+    "## 라이브러리 import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:07:53.317888Z",
-     "start_time": "2020-08-21T06:07:53.305456Z"
+     "end_time": "2020-08-21T06:57:55.033177Z",
+     "start_time": "2020-08-21T06:57:55.029844Z"
     }
    },
    "outputs": [
@@ -51,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=512x512 at 0x7F3AAC091CD0>\n"
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=512x512 at 0x7F3AA9D29F50>\n"
      ]
     }
    ],
@@ -66,12 +64,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 이미지 데이터 확인"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:08:52.703590Z",
-     "start_time": "2020-08-21T06:08:52.700426Z"
+     "end_time": "2020-08-21T06:57:55.791067Z",
+     "start_time": "2020-08-21T06:57:55.782329Z"
     }
    },
    "outputs": [
@@ -79,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=512x512 at 0x7F3AAC091CD0>\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=512x512 at 0x7F3AA9D29F50>\n",
       "PNG (512, 512) RGB\n"
      ]
     }
@@ -101,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:19:38.258237Z",
-     "start_time": "2020-08-21T06:19:38.205450Z"
+     "end_time": "2020-08-21T06:58:02.318971Z",
+     "start_time": "2020-08-21T06:58:02.283456Z"
     }
    },
    "outputs": [
@@ -123,29 +128,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 픽셀 데이터 조회"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:21:36.724992Z",
-     "start_time": "2020-08-21T06:21:36.588253Z"
+     "end_time": "2020-08-21T06:58:05.829065Z",
+     "start_time": "2020-08-21T06:58:05.825429Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
+      "(185, 102, 50)\n",
+      "<ImagingCore object at 0x7f3aa9d1a510>\n"
      ]
     }
    ],
@@ -159,28 +163,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## img cut"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:30:50.549590Z",
-     "start_time": "2020-08-21T06:30:50.547146Z"
+     "end_time": "2020-08-21T06:58:06.768696Z",
+     "start_time": "2020-08-21T06:58:06.766810Z"
     }
    },
    "outputs": [],
    "source": [
     "## 이미지 자르기\n",
     "\n",
-    "box = (100, 100, 400, 400)\n"
+    "box = (100, 100, 400, 400)\n",
+    "box2 = (0,0, 300,300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-21T06:31:24.588652Z",
-     "start_time": "2020-08-21T06:31:24.570157Z"
+     "end_time": "2020-08-21T10:07:25.215470Z",
+     "start_time": "2020-08-21T10:07:25.199871Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "r2 = im.crop(box2)\n",
+    "r2.show()\n",
+    "\n",
+    "# 우상단이 o.o 인듯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T10:07:39.650606Z",
+     "start_time": "2020-08-21T10:07:39.633929Z"
     }
    },
    "outputs": [
@@ -195,7 +224,132 @@
    "source": [
     "print(\"이미지를 확인하세요.ᵕᴗᵕ\")\n",
     "region = im.crop(box)\n",
-    "region.show()"
+    "region.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 사이즈 조정\n",
+    "- resized_image = im.resize((100,200))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T06:53:26.346683Z",
+     "start_time": "2020-08-21T06:53:26.341566Z"
+    }
+   },
+   "source": [
+    "## 회전\n",
+    "\n",
+    "1. rotate() 함수\n",
+    "\n",
+    "- region = region.rotate(180)\n",
+    "- region.rotate(180)도 이미지를 회전시킨 코드와 같은 기능을 하는 코드 입니다. transpose의 경우 각도가 이미 지정되어 있지만 rotate는 원하는 각도만큼 회전시켜주는 코드 입니다.\n",
+    "\n",
+    "<br/>\n",
+    "2. transpose() 함수의 이미지 회전 및 반전 파라미터\n",
+    "\n",
+    "- FLIP_LEFT_RIGHT : 이미지를 좌우 반전 시킵니다.\n",
+    "- FLIP_TOP_BOTTOM : 이미지를 상하 반전 시킵니다.\n",
+    "- ROTATE_90 : 이미지를 시계 반대 방향으로 90도 돌립니다.\n",
+    "- ROTATE_180 : 이미지를 시계 반대 방향으로 180도 돌립니다.\n",
+    "- ROTATE_270 : 이미지를 시계 반대 방향으로 270도 돌립니다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T06:58:49.979855Z",
+     "start_time": "2020-08-21T06:58:49.964532Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이미지를 확인하세요.ᵕᴗᵕ\n"
+     ]
+    }
+   ],
+   "source": [
+    "## d이미지 회전하기\n",
+    "\n",
+    "print(\"이미지를 확인하세요.ᵕᴗᵕ\")\n",
+    "region = region.transpose(Image.ROTATE_180)\n",
+    "region.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T06:54:35.140556Z",
+     "start_time": "2020-08-21T06:54:35.132561Z"
+    }
+   },
+   "source": [
+    "## 이미지 합치기\n",
+    "\n",
+    "- paste\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T10:07:50.778039Z",
+     "start_time": "2020-08-21T10:07:50.743878Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이미지를 확인하세요.ᵕᴗᵕ\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"이미지를 확인하세요.ᵕᴗᵕ\")\n",
+    "im.paste(region, box)\n",
+    "im.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-21T10:07:15.045281Z",
+     "start_time": "2020-08-21T10:07:15.030822Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 100, 400, 400)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box"
    ]
   },
   {
