--- a/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
+++ b/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
@@ -500,11 +500,130 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## install tensorflowjs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-16T08:49:07.765833Z",
+     "start_time": "2020-09-16T08:49:06.311105Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tensorflowjs in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (2.4.0)\n",
+      "Requirement already satisfied: numpy<1.19.0,>=1.16.4 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (1.18.5)\n",
+      "Requirement already satisfied: h5py>=2.8.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (2.10.0)\n",
+      "Requirement already satisfied: tensorflow-cpu<3,>=2.1.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (2.3.0)\n",
+      "Requirement already satisfied: tensorflow-hub==0.7.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (0.7.0)\n",
+      "Requirement already satisfied: six>=1.12.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (1.15.0)\n",
+      "Requirement already satisfied: PyInquirer==1.0.3 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflowjs) (1.0.3)\n",
+      "Requirement already satisfied: astunparse==1.6.3 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.6.3)\n",
+      "Requirement already satisfied: tensorboard<3,>=2.3.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (2.3.0)\n",
+      "Requirement already satisfied: gast==0.3.3 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.3.3)\n",
+      "Requirement already satisfied: protobuf>=3.9.2 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.12.3)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.1.0)\n",
+      "Requirement already satisfied: scipy==1.4.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.4.1)\n",
+      "Requirement already satisfied: tensorflow-estimator<2.4.0,>=2.3.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (2.3.0)\n",
+      "Requirement already satisfied: wrapt>=1.11.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.11.2)\n",
+      "Requirement already satisfied: google-pasta>=0.1.8 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.2.0)\n",
+      "Requirement already satisfied: absl-py>=0.7.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.9.0)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.3.0)\n",
+      "Requirement already satisfied: keras-preprocessing<1.2,>=1.1.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.1.2)\n",
+      "Requirement already satisfied: wheel>=0.26 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.34.2)\n",
+      "Requirement already satisfied: grpcio>=1.8.6 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.27.2)\n",
+      "Requirement already satisfied: regex>=2016.11.21 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from PyInquirer==1.0.3->tensorflowjs) (2020.7.14)\n",
+      "Requirement already satisfied: prompt-toolkit==1.0.14 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from PyInquirer==1.0.3->tensorflowjs) (1.0.14)\n",
+      "Requirement already satisfied: Pygments>=2.2.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from PyInquirer==1.0.3->tensorflowjs) (2.6.1)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (2.24.0)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.2.2)\n",
+      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.4.1)\n",
+      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.6.0.post3)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (47.3.1.post20200622)\n",
+      "Requirement already satisfied: google-auth<2,>=1.6.3 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.17.2)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.0.1)\n",
+      "Requirement already satisfied: wcwidth in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from prompt-toolkit==1.0.14->PyInquirer==1.0.3->tensorflowjs) (0.2.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (2.10)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (2020.6.20)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.25.9)\n",
+      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from markdown>=2.6.8->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.7.0)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (1.2.0)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4; python_version >= \"3\" in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (4.6)\n",
+      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (4.1.1)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.2.7)\n",
+      "Requirement already satisfied: zipp>=0.5 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.1.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (3.0.1)\n",
+      "Requirement already satisfied: pyasn1>=0.1.3 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from rsa<5,>=3.1.4; python_version >= \"3\"->google-auth<2,>=1.6.3->tensorboard<3,>=2.3.0->tensorflow-cpu<3,>=2.1.0->tensorflowjs) (0.4.8)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 20.2.2; however, version 20.2.3 is available.\r\n",
+      "You should consider upgrading via the '/home/aiffel0042/anaconda3/envs/aiffel/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install tensorflowjs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-16T08:49:55.344856Z",
+     "start_time": "2020-09-16T08:49:55.341615Z"
+    }
+   },
+   "source": [
+    "## h5 ==> json\n",
+    "- https://github.com/tensorflow/tfjs/tree/master/tfjs-converter\n",
+    "- tensorflowjs_converter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-16T08:51:39.366004Z",
+     "start_time": "2020-09-16T08:51:37.778298Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#!tensorflowjs_converter --input_format=keras model.h5 02-project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 프로젝트 결과물\n",
+    "- 폴더 링크: https://github.com/ittapa/AIFFEL_LSG/tree/master/lms/01-EXPLORATION/E13-camera_webapp/02-project\n",
+    "- 깃페이지 링크 : https://ittapa.github.io/tfjs_mobile\n",
+    "- js 파일 링크 : \n",
+    "\n",
+    "- 문제점\n",
+    "    - 얼굴영역이 아닌 전체처리: 이미지를 48x48로 리사이즈하기전에 face dectection을 통해 얼굴부분 영역만 골라낸 상태에서 48x48 리사이즈 후 예측모델에 투입.\n",
+    "    \n",
+    "    ```\n",
+    "    \n",
+    "    ```\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
